--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '0.2.7-SNAPSHOT'
+	id 'fabric-loom' version '0.5-SNAPSHOT'
 	id 'maven-publish'
 	id "com.wynprice.cursemaven" version "1.2.2"
 }
@@ -48,13 +48,14 @@ repositories {
 
 dependencies {
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
-	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
+	mappings "net.fabricmc:yarn:1.16.5+build.4:v2"
 	modCompile "net.fabricmc:fabric-loader:${project.loader_version}"
-
+	//Fabric api
+	modImplementation "net.fabricmc.fabric-api:fabric-api:0.30.0+1.16"
 	modCompile "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-	modImplementation ("com.github.Zundrel:Wrenchable:${project.wrenchable_version}") { exclude(module: "modmenu") }
-    include "com.github.Zundrel:Wrenchable:${project.wrenchable_version}"
+	// modImplementation ("com.github.Zundrel:Wrenchable:${project.wrenchable_version}") { exclude(module: "modmenu") }
+    // include "com.github.Zundrel:Wrenchable:${project.wrenchable_version}"
 	
 	modImplementation ("me.shedaniel:RoughlyEnoughItems:${project.rei_version}") { exclude(module: "modmenu") }
 }
